# patient-triage

./: pyproject.toml
chroma_db/: chroma.sqlite3
client/: package-lock.json
client/src/: App.css  App.tsx
server/: pyproject.toml
server/src/triage_system/scripts/: seed_departments.py
server/tests/: test_triage.py
src/triage_system/: api.py  db.py  main.py
src/triage_system/agents/: financial_estimator.py  medical_planner.py  triage_agent.py
src/triage_system/core/: state.py
src/triage_system/data/: departments.json
src/triage_system/scripts/: seed_departments.py
src/triage_system/tools/: clinical_tool.py  finance_tool.py  rag_tool.py
src/triage_system/tools/adk/: rag_tool_adk.py
src/triage_system/triage/: service.py
tests/: test_medical_planner.py  test_triage.py  test_triage_agent.py
